@@ -1,3 +1,4 @@
+/**@constructor*/
 function Reflection(obj) {
 	this.obj = obj;
 }
